Minor lf and tmux

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -46,7 +46,7 @@ set -g window-style 'fg=terminal,bg=black'
 # These require tmux 3.3.
 # Alternatively, see https://stackoverflow.com/a/33553372/563359
 set -g pane-border-lines heavy
-# set -g pane-border-indicators both # Too much.
+set -g pane-border-indicators both # Too much.
 
 # Possible to add pane border coloring:
 # set -g pane-active-border-style "#{?pane_in_mode,fg=yellow,#{?synchronize-panes,fg=red,fg=green}},bg=black"
@@ -70,6 +70,14 @@ bind-key -n DoubleClick3Pane select-pane\; resize-pane -Z
 bind-key -n C-DoubleClick1Pane select-pane\; resize-pane -Z
 # bind-key    -T root         C-MouseDown1Pane      select-pane -t = \; send-keys -M
 bind-key    -T root         C-MouseDown1Pane      select-pane -t = \; display-message 'tmux captures C-Click'
+# These select words/lines/areas even when mouse is captured
+bind-key    -T root         C-MouseDrag1Pane       copy-mode -M
+bind-key    -T copy-mode    C-MouseDragEnd1Pane    send-keys -X copy-pipe-and-cancel
+bind-key    -T copy-mode-vi C-MouseDragEnd1Pane    send-keys -X copy-pipe-and-cancel
+bind-key    -T root         C-DoubleClick1Pane     { select-pane -t = ; copy-mode -H ; send-keys -X select-word ; run-shell -d 0.3 ; send-keys -X copy-pipe-and-cancel }
+bind-key    -T root         C-TripleClick1Pane     { select-pane -t = ; copy-mode -H ; send-keys -X select-line ; run-shell -d 0.3 ; send-keys -X copy-pipe-and-cancel }
+
+
 
 # Options to keep or drop CWD
 bind -N 'New window'         c   new-window   -c '#{pane_current_path}'
