--- a/.config/jj/config.toml
+++ b/.config/jj/config.toml
@@ -55,6 +55,8 @@ merge-tool-edits-conflict-markers=true
 prev = ["co", "@--"]
 next = ["co", "@-+ ~ @"]
 delta = ["diff", "--git", "--config-toml=ui.pager='delta --syntax-theme ansi'"]
+deltas = ["diff", "--git", "--config-toml=ui.pager='delta --syntax-theme ansi -s'"]
+
 
 [revset-aliases]
 next = "@-+ ~ @"  # After `jj up abc`, `jj up next` is equivalent to `jj up abc+`
