jj/config.toml for new jj updates

--- a/.config/jj/config.toml
+++ b/.config/jj/config.toml
@@ -11,6 +11,7 @@ color = "always"
 
 [template-aliases]
 "format_short_id(id)" = "id.shortest(6)"
+'format_short_change_id(id)' = 'format_short_id(id).upper()'
 "format_timestamp(timestamp)" = "timestamp.ago()"
 
 [merge-tools.vscode]
