Tmux: switch prefix to C-z

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,6 +5,10 @@ set -g focus-events on
 set -g mode-keys vi
 set -g status-keys vi
 
+set-option -g prefix C-z
+bind-key C-z send-prefix
+bind-key C-b suspend-client # Formerly C-z
+
 # Ms modifies OSC 52 clipboard handling to work with mosh, see
 # https://gist.github.com/yudai/95b20e3da66df1b066531997f982b57b
 # Should be unnecessary in the next release of tmux
