Tmux: switch prefix to C-z (pt 2)

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -60,8 +60,8 @@ set -g pane-border-indicators both # Too much.
 
 #### Bindings ####
 
-bind-key -N 'Enter copy mode' -n M-C-B copy-mode
-bind-key -N 'Send M-C-b'         M-C-B send-keys M-C-B
+bind-key -N 'Enter copy mode' -n M-C-Z copy-mode
+bind-key -N 'Send M-C-z'         M-C-Z send-keys M-C-Z
 
 # Don't show the note. Use C-b ? for that
 bind-key -N "Show commands for a key combination" / command-prompt -k -p key -1 "list-keys -1 \"%%%\""
