tmux switch prefix to C-z part 3

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -9,6 +9,10 @@ set-option -g prefix C-z
 bind-key C-z send-prefix
 bind-key C-b suspend-client # Formerly C-z
 
+bind-key -n C-b send-keys C-b \; display-message "Prefix changed to C-z." 
+bind-key -N 'Enter copy mode' -n M-C-Z copy-mode
+bind-key -N 'Send M-C-z'         M-C-Z send-keys M-C-Z
+
 # Ms modifies OSC 52 clipboard handling to work with mosh, see
 # https://gist.github.com/yudai/95b20e3da66df1b066531997f982b57b
 # Should be unnecessary in the next release of tmux
@@ -59,9 +63,6 @@ set -g pane-border-indicators both # Too much.
 # tmux set -ug pane-border-style; tmux set -ug pane-active-border-style
 
 #### Bindings ####
-
-bind-key -N 'Enter copy mode' -n M-C-Z copy-mode
-bind-key -N 'Send M-C-z'         M-C-Z send-keys M-C-Z
 
 # Don't show the note. Use C-b ? for that
 bind-key -N "Show commands for a key combination" / command-prompt -k -p key -1 "list-keys -1 \"%%%\""
