jj prev and jj.logstatus

--- a/.config/jj/config.toml
+++ b/.config/jj/config.toml
@@ -84,6 +84,7 @@ merge-tool-edits-conflict-markers=true
 
 [aliases]
 next = ["co", "@-+ ~ @"]
+prev = ["co", "@--"]
 delta = ["diff", "--git", "--config-toml=ui.pager='delta --syntax-theme ansi'"]
 deltas = ["diff", "--git", "--config-toml=ui.pager='delta --syntax-theme ansi -s'"]
 
