tmux.conf: note about statusline

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -107,4 +107,8 @@ bind S-Right move-pane -t '.{right-of}'
 bind S-Left  move-pane -t '.{left-of}'
 bind S-down  move-pane -h -t '.{down-of}'
 
+# To change status line color in some hosts:
+# if-shell "hostname|grep -E 'host1|host2'" "set -g status-style bg=blue,fg=black"
+
 source-file -q ~/.config/tmux/tmux-local.conf
+
