--- a/.config/git/config
+++ b/.config/git/config
@@ -112,14 +112,25 @@ diffFilter = delta --color-only
 [delta]
 navigate = true    # use n and N to move between diff sections
 
+# See /etc/tigrc, https://github.com/jonas/tig/blob/master/tigrc,
+# https://jonas.github.io/tig/doc/tigrc.5.html
 [tig]
+mouse=true
 refresh-mode=periodic
 refresh-interval=3
 main-view-date-display=relative-compact
 main-view-id-display=true
+blame-view=author:abbreviated date:relative-compact id:yes,color line-number:yes,interval=1 text
 # Tig always shows "author dates" instead of "commit dates",
 # making reflog dates are very confusing
 reflog-view-date-display=relative
+# Don't show refs made by `jj`, `git-branchless`, etc.
+reference-format=hide:other
+
+[tig "color"]
+# cursor = default default underline
+cursor = default default reverse dim
+# cursor = black white
 
 
 
