--- a/.config/jj/config.toml
+++ b/.config/jj/config.toml
@@ -95,6 +95,9 @@ M = "present(main) | present(master)"  # Main branch
 # R: "relevant commits" from jj.logstatus. Better name?
 R ="M..@|(M..@)-|@..M|@|M..branches()|(M..branches())-|M|remote_branches().. | (remote_branches()..)-"
 
+[revsets]
+short-prefixes="(remote_branches(main)|remote_branches(master)|remote_branches(develop)|tags()).."
+
 [colors]
 # "diff removed" = {fg="red", bold=true}
 # "diff added" = {fg="green", bold = true}
