--- a/.config/jj/config.toml
+++ b/.config/jj/config.toml
@@ -16,6 +16,11 @@ log-word-wrap=true
 "format_timestamp(timestamp)" = "timestamp.ago()"
 "format_short_signature(signature)" = 'label("email", signature.username() ++ "@")'
 
+# cargo install --git https://github.com/arxanas/git-branchless scm-record --features scm-diff-editor
+[merge-tools.scm]
+program="scm-diff-editor"
+edit-args = ["--dir-diff", "$left", "$right"]
+
 [merge-tools.vscode]
 program = "code"
 merge-args = ["--new-window", "--wait", "--merge", "$left", "$right", "$base", "$output"]
