kitty: ctrl+shift+h for hash & change id hints

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -5,6 +5,7 @@
 # ~/.local/share/doc/kitty/html/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
 # https://sw.kovidgoyal.net/kitty/conf/
 # file:///usr/share/doc/kitty/html/conf.html
+# man 5 kitty.conf
 
 # DejaVu Sans Mono
 font_family Fira Code Medium
@@ -29,6 +30,10 @@ strip_trailing_spaces smart
 mouse_map ctrl+left      click grabbed,ungrabbed mouse_click_url_or_select
 # For older kitty ~0.19
 # open_url_modifiers ctrl
+
+## Hints
+# Change id
+map kitty_mod+h kitten hints --type regex --regex '\b([k-z]{5,}|[K-Z]{5,}|[0-9a-f]{5,})\b' --program -
 
 # These shortcuts deal with kitty windows
 # by default, I plan on using tmux instead.
