--- a/.config/alacritty.yml
+++ b/.config/alacritty.yml
@@ -12,6 +12,29 @@ font:
 
 # draw_bold_text_with_bright_colors: true
 
+################## Delete these?
+# These are not very useful as alacritty can't match wod boundaries or other
+# zero-width regex elements
+hints:
+  enabled:
+   - regex: '([k-z]{5,}|[K-Z]{5,}|[0-9a-fA-F]{5,})'
+     action: Paste
+     binding:
+       key: H
+       mods: Control|Shift
+   - regex: "(ipfs:|ipns:|magnet:|mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)\
+             [^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
+     hyperlinks: true
+     command: xdg-open
+     post_processing: true
+     mouse:
+       enabled: true
+       mods: None
+     binding:
+       key: U
+       mods: Control|Shift
+##################
+
 window:
     decorations_theme_variant: Dark
 
