git: submodule.recurse=true

--- a/.config/git/config
+++ b/.config/git/config
@@ -60,6 +60,9 @@ lg=%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %Creset
 # rebase = true
 ff = only
 
+[submodule]
+recurse=true
+
 [credential]
 helper = store
 
