Tmux-fingers: change bind to `c-f` from `F`

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -110,10 +110,13 @@ bind S-down  move-pane -h -t '.{down-of}'
 # To change status line color in some hosts:
 # if-shell "hostname|grep -E 'host1|host2'" "set -g status-style bg=blue,fg=black"
 
+set -g @fingers-key 'c-f'
 set -g @fingers-pattern-1 '\<([k-z]{8,}|[K-Z]{6,}|[0-9a-fA-F]{6,})\>'
 set -g @fingers-hint-position-nocompact "left"
 # See ~/.config/tmux/plugins/fingers/scripts/config.sh for default patterns
 run-shell ~/.config/tmux/plugins/fingers/tmux-fingers.tmux
+# run-shell ~/tmp/tmux/tmux_super_fingers/tmux_super_fingers.tmux
+# run-shell ~/tmp/tmux/tmux-thumbs/tmux-thumbs.tmux
 
 source-file -q ~/.config/tmux/tmux-local.conf
 
