fish and tmux: more prompt options, per-host configs

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -107,9 +107,6 @@ bind S-Right move-pane -t '.{right-of}'
 bind S-Left  move-pane -t '.{left-of}'
 bind S-down  move-pane -h -t '.{down-of}'
 
-# To change status line color in some hosts:
-# if-shell "hostname|grep -E 'host1|host2'" "set -g status-style bg=blue,fg=black"
-
 set -g @fingers-key 'c-f'
 set -g @fingers-pattern-1 '\<([k-z]{8,}|[K-Z]{6,}|[0-9a-fA-F]{6,})\>'
 set -g @fingers-hint-position-nocompact "left"
@@ -117,6 +114,11 @@ set -g @fingers-hint-position-nocompact "left"
 run-shell ~/.config/tmux/plugins/fingers/tmux-fingers.tmux
 # run-shell ~/tmp/tmux/tmux_super_fingers/tmux_super_fingers.tmux
 # run-shell ~/tmp/tmux/tmux-thumbs/tmux-thumbs.tmux
+
+# To change status line color in some hosts:
+# if-shell "hostname|grep -E 'host1|host2' > /dev/null" "set -g status-style bg=blue,fg=black"
+# or if-shell "case $(hostname) in; host1|host2) true;; *) false;; esac" "set -g status-style bg=blue,fg=black"
+# 
 
 source-file -q ~/.config/tmux/tmux-local.conf
 
