--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -68,7 +68,7 @@ set -g pane-border-indicators both # Too much.
 bind-key -N "Show commands for a key combination" / command-prompt -k -p key -1 "list-keys -1 \"%%%\""
 # bind-key -g ? list-keys -Na # Use :lsk instead?
 
-bind-key C-M set mouse \; display-message 'Mouse #{?mouse,on,off}'
+bind-key M set mouse \; display-message 'Mouse #{?mouse,on,off}'
 bind-key C-R source ~/.config/tmux/tmux.conf \; display-message "Config reloaded."
 
 bind-key -n DoubleClick3Pane select-pane\; resize-pane -Z
@@ -107,18 +107,11 @@ bind S-Right move-pane -t '.{right-of}'
 bind S-Left  move-pane -t '.{left-of}'
 bind S-down  move-pane -h -t '.{down-of}'
 
-set -g @fingers-key 'c-f'
-set -g @fingers-pattern-1 '\<([k-z]{8,}|[K-Z]{6,}|[0-9a-fA-F]{6,})\>'
-set -g @fingers-hint-position-nocompact "left"
-# See ~/.config/tmux/plugins/fingers/scripts/config.sh for default patterns
-run-shell ~/.config/tmux/plugins/fingers/tmux-fingers.tmux
-# run-shell ~/tmp/tmux/tmux_super_fingers/tmux_super_fingers.tmux
-# run-shell ~/tmp/tmux/tmux-thumbs/tmux-thumbs.tmux
-
 # To change status line color in some hosts:
 # if-shell "hostname|grep -E 'host1|host2' > /dev/null" "set -g status-style bg=blue,fg=black"
 # or if-shell "case $(hostname) in; host1|host2) true;; *) false;; esac" "set -g status-style bg=blue,fg=black"
 # 
 
+run-shell 'for f in ~/.config/tmux/autoload/*.tmux; do tmux source-file $f; done'
 source-file -q ~/.config/tmux/tmux-local.conf
 
