tmux: make search incremental

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -71,6 +71,11 @@ bind-key -N "Show commands for a key combination" / command-prompt -k -p key -1 
 bind-key M set mouse \; display-message 'Mouse #{?mouse,on,off}'
 bind-key C-R source ~/.config/tmux/tmux.conf \; display-message "Config reloaded."
 
+# Make search incremental, copied form Emacs-mode bindings
+bind-key    -T copy-mode-vi ?  command-prompt -i -I "#{pane_search_string}" -T search -p "(search up)" { send-keys -X search-backward-incremental "%%" }
+bind-key    -T copy-mode-vi /  command-prompt -i -I "#{pane_search_string}" -T search -p "(search up)" { send-keys -X search-forward-incremental "%%" }
+
+
 bind-key -n DoubleClick3Pane select-pane\; resize-pane -Z
 bind-key -n C-DoubleClick1Pane select-pane\; resize-pane -Z
 # bind-key    -T root         C-MouseDown1Pane      select-pane -t = \; send-keys -M
