ripgrep: follow symlinks, but stay in one filesystem

--- a/.config/ripgrep.conf
+++ b/.config/ripgrep.conf
@@ -1,4 +1,6 @@
 # Must add this file to RIPGREP_CONFIG_PATH for it to apply.
+--follow
+--one-file-system
 
 --max-columns=94
 --max-columns-preview
