--- a/.config/jj/config.toml
+++ b/.config/jj/config.toml
@@ -16,6 +16,16 @@ log-word-wrap=true
 "format_timestamp(timestamp)" = "timestamp.ago()"
 "format_short_signature(signature)" = 'label("email", signature.username() ++ "@")'
 
+[templates]
+commit_summary = '''
+separate(" ",
+  format_short_commit_id(commit_id),
+  if(description, description.first_line(), description_placeholder),
+  if(empty, label("empty", "(empty)")),
+  branches,
+)
+'''
+
 # cargo install --git https://github.com/arxanas/git-branchless scm-record --features scm-diff-editor
 [merge-tools.scm]
 program="scm-diff-editor"
