jj: more short commit format experimentation

--- a/.config/jj/config.toml
+++ b/.config/jj/config.toml
@@ -15,14 +15,17 @@ log-word-wrap=true
 'format_short_change_id(id)' = 'format_short_id(id).upper()'
 "format_timestamp(timestamp)" = "timestamp.ago()"
 "format_short_signature(signature)" = 'label("email", signature.username() ++ "@")'
+"separator()" = 'label("change_id rest", "|")'
 
 [templates]
 commit_summary = '''
 separate(" ",
   format_short_commit_id(commit_id),
-  if(description, description.first_line(), description_placeholder),
   if(empty, label("empty", "(empty)")),
-  branches,
+  separate(" " ++ separator(),
+    if(description, description.first_line(), description_placeholder),
+    branches,
+  )
 )
 '''
 
