--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,8 +10,10 @@ bind-key C-z send-prefix
 bind-key C-b suspend-client # Formerly C-z
 
 bind-key -n C-b send-keys C-b \; display-message "Prefix changed to C-z." 
-bind-key -N 'Enter copy mode' -n M-C-Z copy-mode
-bind-key -N 'Send M-C-z'         M-C-Z send-keys M-C-Z
+# bind-key -N 'Enter copy mode' -n M-C-Z copy-mode
+# bind-key -N 'Send M-C-z'         M-C-Z send-keys M-C-Z
+bind-key -N 'Enter copy mode' -n M-Z   copy-mode
+bind-key -N 'Send M-Z'           M-Z   send-keys M-Z
 
 # Ms modifies OSC 52 clipboard handling to work with mosh, see
 # https://gist.github.com/yudai/95b20e3da66df1b066531997f982b57b
