jj uses streampager

--- a/.config/jj/config.toml
+++ b/.config/jj/config.toml
@@ -9,6 +9,7 @@ merge-editor = "vimdiff"
 # merge-editor = "kdiff3"
 color = "always"
 log-word-wrap=true
+pager="sp"
 
 [template-aliases]
 "format_short_id(id)" = "id.shortest(6)"
