Minor alacritty and vs code

--- a/.config/Code/User/ilyagr_home_config/settings.json
+++ b/.config/Code/User/ilyagr_home_config/settings.json
@@ -128,7 +128,6 @@
     // "rust-analyzer.cargo.buildScripts.overrideCommand": null,
     "workbench.sideBar.location": "right",
     "window.commandCenter": true,
-    "editor.minimap.enabled": false,
     "[rust]": {
         "editor.formatOnSave": true,
     },
@@ -150,7 +149,8 @@
                 }
             ],
         }
-    }
+    },
+    "workbench.colorTheme": "Atom One Dark"
     // "remote.SSH.defaultExtensions": [
     //     "gitpod.gitpod-remote-ssh"
     // ],
