--- a/.config/jj/config.toml
+++ b/.config/jj/config.toml
@@ -11,13 +11,6 @@ color = "always"
 log-word-wrap=true
 pager="sp"
 
-[template-aliases]
-"format_short_id(id)" = "id.shortest(6)"
-'format_short_change_id(id)' = 'format_short_id(id).upper()'
-"format_timestamp(timestamp)" = "timestamp.ago()"
-"format_short_signature(signature)" = 'label("email", signature.username() ++ "@")'
-commit_summary_separator = 'label("separator", "| ")'
-
 # cargo install --git https://github.com/arxanas/git-branchless scm-record --features scm-diff-editor
 [merge-tools.scm]
 program="scm-diff-editor"
@@ -110,7 +103,17 @@ R ="M..@|(M..@)-|@..M|@|M..branches()|(M..branches())-|M|remote_branches().. | (
 [revsets]
 short-prefixes="(remote_branches(main)|remote_branches(master)|remote_branches(develop)|tags()).."
 
+[template-aliases]
+"format_short_id(id)" = "id.shortest(6)"
+'format_short_change_id(id)' = 'format_short_id(id).upper()'
+"format_timestamp(timestamp)" = "timestamp.ago()"
+"format_short_signature(signature)" = 'label("email", signature.username() ++ "@")'
+commit_summary_separator = 'label("separator", "| ")'
+description_placeholder = 'label(separate(" ", if(empty, "empty"), "description placeholder"), "(no description set)")'
+
 [colors]
+"description placeholder" =  "yellow" # "blue"
+"empty description placeholder" = "green"
 # "diff removed" = {fg="red", bold=true}
 # "diff added" = {fg="green", bold = true}
 # "diff modified" = {fg="cyan", bold=true}
