tmux.conf: bugfix to note about statusline

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -116,7 +116,7 @@ bind S-down  move-pane -h -t '.{down-of}'
 
 # To change status line color in some hosts:
 # if-shell "hostname|grep -E 'host1|host2' > /dev/null" "set -g status-style bg=blue,fg=black"
-# or if-shell "case $(hostname) in; host1|host2) true;; *) false;; esac" "set -g status-style bg=blue,fg=black"
+# or if-shell "case $(hostname) in host1|host2) true;; *) false;; esac" "set -g status-style bg=blue,fg=black"
 # 
 
 run-shell 'for f in ~/.config/tmux/autoload/*.tmux; do tmux source-file $f; done'
