tmux: c-z c-x to pass tmux-buffer to fish_clipboard_copy

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -15,6 +15,10 @@ bind-key -n C-b send-keys C-b \; display-message "Prefix changed to C-z."
 bind-key -N 'Enter copy mode' -n M-Z   copy-mode
 bind-key -N 'Send M-Z'           M-Z   send-keys M-Z
 
+# fish_clipboard_copy exits with non-0 error code in weird cases
+# and doesn't exit with an error code when it should
+bind-key C-x run-shell -b 'fish -c "tmux show-buffer &| fish_clipboard_copy || true"'
+
 # Ms modifies OSC 52 clipboard handling to work with mosh, see
 # https://gist.github.com/yudai/95b20e3da66df1b066531997f982b57b
 # Should be unnecessary in the next release of tmux
